--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betca-tpv-angular",
-  "version": "0.0.0",
+  "version": "3.0.0-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
