--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "baseUrl": "src",
     "paths": {
       "@env": ["environments/environment"],
-      "@shared": ["app/shared"],
+      "@shared/*": ["app/shared/*"],
       "@sharedHome/*": ["app/home/shared/*"],
       "@core/*": ["app/core/*"]
     },
