--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "paths": {
       "@env": ["environments/environment"],
       "@shared/*": ["app/shared/*"],
-      "@sharedHome/*": ["app/home/shared/*"],
-      "@core/*": ["app/core/*"]
+      "@core/*": ["app/core/*"],
+      "@img/*": ["assets/img/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
