--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "paths": {
       "@env": ["environments/environment"],
       "@shared/*": ["app/shared/*"],
-      "@core/*": ["app/core/*"],
-      "@img/*": ["assets/img/*"]
+      "@core/*": ["app/core/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
