--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "betca-tpv-angular",
   "version": "3.0.0-SNAPSHOT",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "postinstall": "ng build --prod",
     "start": "node server.js"
   },
   "engines": {
     "node": "~14.15.0",
-    "npm": "~6.14.18"
+    "npm": "~6.14.9"
   },
   "private": true,
   "dependencies": {
