--- a/.github/workflows/angular-test-sonar.yml
+++ b/.github/workflows/angular-test-sonar.yml
@@ -18,11 +18,10 @@ jobs:
         with:
           node-version: 14
       - run: npm ci
-      - run: npm run-script postinstall  # package.json -> "scripts"
-#  run: npm run-script test  # "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
+      - run: npm run-script build-prod  # package.json -> "scripts"
+    # - run: npm run-script test  # "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
