--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "betca-tpv-angular",
-  "version": "3.0.0-SNAPSHOT",
+  "version": "4.0.0-Release",
   "scripts": {
     "heroku-postbuild": "ng build --prod",
-    "postinstall": "ng build --prod",
+    "build-prod": "ng build --prod",
     "start": "node server.js"
   },
   "engines": {
