--- a/.github/workflows/angular-test-sonar.yml
+++ b/.github/workflows/angular-test-sonar.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm run-script build-prod  # package.json -> "scripts"
     # - run: npm run-script test  # "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1.2
+        uses: SonarSource/sonarcloud-github-action@v1.2 # file: sonar-project.properties
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
