--- a/.github/workflows/angular-test-sonar.yml
+++ b/.github/workflows/angular-test-sonar.yml
@@ -21,7 +21,16 @@ jobs:
       - run: npm run-script build-prod  # package.json -> "scripts"
     # - run: npm run-script test  # "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI"
       - name: SonarCloud Scan
+        if: success()
         uses: SonarSource/sonarcloud-github-action@v1.2 # file: sonar-project.properties
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Slack WebHook
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,author,commit,author,workflow,
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
