--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "betca-tpv-angular",
-  "version": "4.1.0-SNAPSHOT",
+  "version": "4.1.0-Release",
   "scripts": {
     "heroku-postbuild": "ng build --prod",
     "build-prod": "ng build --prod",
