--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth0/angular-jwt": "^5.0.1",
     "angular-responsive-carousel": "^2.0.2",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
